chore: fix horizontal scroll breaking w/long titles on home page
With long unbroken strings in a title on the home page the
mobile page has horizontal scroll where it shouldn't and
has a bad user experiance. This should fix it so it doesn't
continue to force horizontal scroll.

This prefers text-wrap: pretty, but falls back to the more
broadly adopted text-wrap: balance.

--- a/src/styles/components/_content-grid.css
+++ b/src/styles/components/_content-grid.css
@@ -9,25 +9,24 @@
     --content-max-width: 1400px;
 
     --content-size: calc(
-            (var(--content-max-width) - var(--paragraph-max-width))
+        (var(--content-max-width) - var(--paragraph-max-width))
     );
 }
 
 .content-grid {
     display: grid;
+    overflow: hidden;
+    text-wrap: balance;
     grid-template-columns:
-    [full-width-start] minmax(var(--padding-inline), 16rem)
-    [breakout-start] 0
-    [content-start] 0
-    [paragraph-start]
-        min(
-          100% - (var(--padding-inline) * 2),
-          var(--paragraph-max-width)
-        )
-    [paragraph-end]
-    minmax(0, var(--content-size))[content-end]
-    minmax(0, 7rem) [breakout-end]
-    minmax(var(--padding-inline), 1fr) [full-width-end];
+        [full-width-start] minmax(var(--padding-inline), 16rem)
+        [breakout-start] 0
+        [content-start] 0
+        [paragraph-start]
+        min(100% - (var(--padding-inline) * 2), var(--paragraph-max-width))
+        [paragraph-end]
+        minmax(0, var(--content-size)) [content-end]
+        minmax(0, 7rem) [breakout-end]
+        minmax(var(--padding-inline), 1fr) [full-width-end];
 }
 
 .content-grid > *,
